--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <source src="./assets/ejercicio.mp4" />
       </video>
 
-        <button>Play/Pause</button>
+        <button id="playButton">Play/Pause</button>
+        <button id="muteButton">Mute/Unmute</button>
     </main>
-    <!--npm init crea el proyecto-->
-    <!--npm start iniciar el proyecto, y toca modificar el package.json-->
-    <script src="./assets/index.js"></script>
+
+    <script type="module" src="/assets/index.js"></script>
 </body>
 
 </html>
