--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             Ipsam error id, laboriosam perspiciatis nemo molestias natus voluptatibus velit beatae veritatis sit odio mollitia non ea, aliquid consequatur dignissimos aliquam consequuntur veniam dolores corrupti itaque consectetur expedita. Libero, repudiandae?
         </li>
     </ul>
-
+    <!--"start": "live-server" package.json-->
 
     <script type="module" src="/assets/index.js"></script>
 </body>
